assets/test-package/tests/failing/persistent-compare-failure/test.typ
#import "/src/lib.typ": helper

#helper("Persistent Compare Failure")
